# dealflow

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
data/: deals.db
docs/: implementation_plan.md  walkthrough.md
src/: cli.py  config.py  models.py  pipeline.py  scheduler.py  server.py  triage.py
src/enrichment/: apollo.py  crunchbase.py  founders.py  github_metrics.py  website.py
src/notifications/: digest.py  slack.py
src/scoring/: scorer.py
src/sourcing/: __init__.py  academic.py  arxiv.py  github_search.py  github_trending.py  hacker_news.py  hn_frontpage.py  huggingface.py  indie_hackers.py  linkedin.py  product_hunt.py  reddit.py  rss.py  twitter.py  yc_batch.py
src/storage/: airtable.py  db.py
tests/: test_models.py  test_pipeline.py  test_scorer.py
